Editing BulkCustomers functionality added.